[tool.poetry]
name = "poetry-min-python-analyser"
version = "0.1.0"
description = ""
authors = ["Artemis Livingstone <ar.d.livingstone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
toml = "^0.10.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
